# openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.1.0
 info:
   title: My API
   description: |
@@ -6,6 +6,7 @@ info:
   version: 1.0.0
 servers:
   - url: http://trust-balancer-1606046615.eu-west-3.elb.amazonaws.com
+
 paths:
   /auth/login:
     post:
@@ -20,7 +21,7 @@ paths:
             schema:
               type: object
               properties:
-                username:
+                email:
                   type: string
                 password:
                   type: string
@@ -37,36 +38,6 @@ paths:
                     description: JWT token for authentication
         "401":
           description: Unauthorized
-
-  /auth/signup:
-    post:
-      tags:
-        - Auth
-      summary: User sign up
-      operationId: auth/signUpUser
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                username:
-                  type: string
-                email:
-                  type: string
-                password:
-                  type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
 
   /auth/forgot-password:
     post:
@@ -149,6 +120,8 @@ paths:
         - Books
       summary: Get all books
       operationId: getAllBooks
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: OK
@@ -163,6 +136,8 @@ paths:
         - Books
       summary: Create a new book
       operationId: addBook
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -181,6 +156,8 @@ paths:
         - Books
       summary: Get book statistics
       operationId: getBookStats
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: OK
@@ -195,6 +172,8 @@ paths:
         - Books
       summary: Get filtered books
       operationId: getFilteredBooks
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: page
@@ -224,6 +203,8 @@ paths:
         - Books
       summary: Update a book
       operationId: updateBook
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -266,6 +247,8 @@ paths:
         - TVShows
       summary: Get all TV shows
       operationId: getAllTvShows
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: OK
@@ -279,7 +262,9 @@ paths:
       tags:
         - TVShows
       summary: Create a new TV show
-      operationId: addTvShow
+      operationId: addTvShows
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -297,7 +282,9 @@ paths:
       tags:
         - TVShows
       summary: Get TV show statistics
-      operationId: getTvStats
+      operationId: getTvShowStats
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: OK
@@ -305,13 +292,14 @@ paths:
             application/json:
               schema:
                 type: object # You may need to define the schema for TV show stats
-
   /tv/filter:
     get:
       tags:
         - TVShows
       summary: Get filtered TV shows
       operationId: getFilteredTvShows
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: OK
@@ -327,7 +315,9 @@ paths:
       tags:
         - TVShows
       summary: Update a TV show
-      operationId: updateTvShow
+      operationId: updateTvShows
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -370,6 +360,8 @@ paths:
         - Movie
       summary: Get all movies
       operationId: getAllMovies
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: OK
@@ -384,6 +376,8 @@ paths:
         - Movie
       summary: Create a new movie
       operationId: addMovie
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -396,12 +390,14 @@ paths:
         "400":
           description: Bad Request
 
-  /movies/stats:
+  /movie/stats:
     get:
       tags:
         - Movie
       summary: Get movie statistics
       operationId: getMovieStats
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: OK
@@ -416,6 +412,8 @@ paths:
         - Movie
       summary: Get filtered movies
       operationId: getFilteredMovies
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: OK
@@ -432,6 +430,8 @@ paths:
         - Movie
       summary: Update a movie
       operationId: updateMovie
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -455,6 +455,8 @@ paths:
         - Movie
       summary: Delete a movie
       operationId: deleteMovie
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -473,6 +475,9 @@ paths:
       tags:
         - Users
       summary: Get all users
+      operationId: getAllUsers
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: OK
@@ -488,6 +493,9 @@ paths:
       tags:
         - Users
       summary: Create a new user
+      operationId: createNewUser
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -507,6 +515,10 @@ paths:
                   $ref: "#/components/schemas/User"
 
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
   schemas:
     Book:
       type: object
@@ -633,18 +645,6 @@ components:
           type: string
         email:
           type: string
-        date_of_birth:
+        password:
           type: string
-          format: date
-        profilePicture:
-          type: string
-        role:
-          type: string
-        status:
-          type: string
-        createdAt:
-          type: string
-          format: date-time
-        lastLoginAt:
-          type: string
-          format: date-time
+    
